BB-9474: Mobile(iOS)/FrontStore > pages with grid - column titles overlapped each other and item data overlapped each other - fix mobile view in ios devices

--- a/src/Oro/Bundle/DataGridBundle/Resources/public/blank/scss/components/datagrid-table.scss
+++ b/src/Oro/Bundle/DataGridBundle/Resources/public/blank/scss/components/datagrid-table.scss
@@ -2,4 +2,5 @@
 
 .grid.table-bordered {
     border-width: $datagrid-table-border-width;
+    min-width: 100%;
 }
